--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,66 +1,78 @@
-# Nama workflow, bebas mau dinamain apa
 name: Deploy to GitHub Pages
 
-# Kapan workflow ini jalan?
-# Disini, dia bakal jalan setiap kali ada 'push' ke branch 'main'
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-      - main
-  # Biar bisa dijalanin manual juga dari tab Actions di GitHub
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Izin yang dibutuhin sama si Actions buat nge-deploy ke Pages
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Cuma ngebolehin satu proses deploy jalan di waktu yang sama
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
-  cancel-in-progress: true
+  cancel-in-progress: false
 
-# Langkah-langkah yang harus dilakuin
 jobs:
+  # Build job
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Detect package manager
+        id: detect-package-manager
+        run: |
+          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
+            echo "manager=yarn" >> $GITHUB_OUTPUT
+            echo "command=install" >> $GITHUB_OUTPUT
+            echo "runner=yarn" >> $GITHUB_OUTPUT
+            exit 0
+          elif [ -f "${{ github.workspace }}/package.json" ]; then
+            echo "manager=npm" >> $GITHUB_OUTPUT
+            echo "command=ci" >> $GITHUB_OUTPUT
+            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+            exit 0
+          else
+            echo "Unable to determine package manager"
+            exit 1
+          fi
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: ${{ steps.detect-package-manager.outputs.manager }}
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v4
+      - name: Install dependencies
+        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+      - name: Build with Astro
+        run: |
+          ${{ steps.detect-package-manager.outputs.runner }} astro build \
+            --site "${{ steps.pages.outputs.origin }}" \
+            --base "${{ steps.pages.outputs.base_path }}"
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./dist
+
+  # Deployment job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      # 1. Ambil kode dari repo lu
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      # 2. Siapin lingkungan Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20" # Pake Node.js versi 20
-          cache: 'npm'
-
-      # 3. Install semua package yang dibutuhin
-      - name: Install dependencies
-        run: npm install
-
-      # 4. Build website Astro-nya
-      #    Astro bakal otomatis pake site & base dari astro.config.mjs
-      - name: Build
-        run: npm run build
-
-      # 5. Siapin artifact (hasil build) buat di-upload ke Pages
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-
-      # 6. Upload artifact-nya
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Path ke folder hasil build Astro (default-nya 'dist')
-          path: './dist'
-
-      # 7. Deploy ke GitHub Pages!
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
