--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,72 +1,60 @@
-# Nama Workflow-nya, boss, bebas mau apa aja
-name: Deploy to GitHub Pages
+# Nama workflow, bisa disesuain sama nama proyek
+name: Deploy LaserCut Pro to GitHub Pages
 
-# Kapan workflow ini jalan?
+# Kapan workflow ini jalan
 on:
-  # Jalanin otomatis setiap ada push ke branch "main"
   push:
     branches:
       - main
-  # Biar bisa dijalanin manual juga dari tab Actions di GitHub
   workflow_dispatch:
 
-# Izin yang dibutuhin sama Actions buat nge-deploy
+# Izin buat si Actions
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Settingan buat environment GitHub Pages-nya
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
-# Daftar kerjaan yang harus dilakuin
+# Daftar kerjaan (jobs)
 jobs:
-  # Kerjaan pertama: nge-build project-nya
   build:
     runs-on: ubuntu-latest
     steps:
-      # 1. Checkout kode dari repository lo
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Setup Node.js versi 20
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm" # Biar npm install lebih ngebut
+          # README minta v18+, kita pake 20 yang LTS dan lebih baru
+          node-version: '20'
+          # Cache buat 'npm' biar install lebih ngebut ke depannya
+          cache: 'npm'
 
-      # 3. Install semua dependency dari package.json
       - name: Install dependencies
+        # Perintah install sesuai dokumentasi di README.md
         run: npm install
 
-      # 4. Jalanin script build Astro-nya
-      #    --base udah di-set di astro.config.mjs, jadi aman
-      - name: Build
+      - name: Build static files
+        # Perintah build sesuai dokumentasi di README.md
         run: npm run build
 
-      # 5. Konfigurasi GitHub Pages
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      # 6. Upload hasil build (dari folder 'dist') sebagai artifact
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Path ke folder output build lo
+          # Arahin ke folder 'dist' sesuai instruksi deploy di README.md
           path: './dist'
 
-  # Kerjaan kedua: nge-deploy hasil build-nya
   deploy:
+    # Job ini sama, gak perlu diubah
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build # Kerjaan ini baru jalan setelah 'build' selesai
     steps:
-      # 1. Deploy ke GitHub Pages!
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
