--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raja-metal-cutting-new",
+  "name": "laser-cutting-website",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,8 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^3.4.1",
     "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.3",
     "tailwindcss": "^3.4.17"
   }
