--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "jasa cutting laser - Jasa Laser Cutting Terpercaya",
+  "name": "jasa cutting laser - raja cutting laser Terpercaya",
   "short_name": "jasa cutting laser",
-  "description": "Jasa laser cutting profesional di Jawa Barat dengan teknologi terdepan. CNC Router, Laser Fiber, Laser CO2, dan Galvo Engraving dengan kualitas premium.",
+  "description": "raja cutting laser profesional di Jawa Barat dengan teknologi terdepan. CNC Router, Laser Fiber, Laser CO2, dan Galvo Engraving dengan kualitas premium.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
