--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "jasa cutting laser - raja cutting laser Terpercaya",
-  "short_name": "jasa cutting laser",
+  "name": "raja cutting laser - raja cutting laser Terpercaya",
+  "short_name": "raja cutting laser",
   "description": "raja cutting laser profesional di Jawa Barat dengan teknologi terdepan. CNC Router, Laser Fiber, Laser CO2, dan Galvo Engraving dengan kualitas premium.",
   "start_url": "/",
   "display": "standalone",
