--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 # Nama workflow, bisa disesuain sama nama proyek
-name: Deploy jasa cutting laser to GitHub Pages
+name: Deploy raja cutting laser to GitHub Pages
 
 # Kapan workflow ini jalan
 on:
