[dyad] Refactored codebase for N8N integration - wrote 2 file(s), deleted 3 file(s)

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ OPENROUTER_API_KEY="sk-or-v1-e1de0d0ac610c2b882aa2f8ef764f33ecdce610f6588c3610d4
 
 # N8N Webhook URL for notifications
 N8N_WEBHOOK_URL="https://projek-n8n-n8n.qk6yxt.easypanel.host/webhook/d75d199c-60c2-4840-a065-d648788089bb"
+
+# WhatsApp Webhook Verification Token
+WHATSAPP_VERIFY_TOKEN="YOUR_CUSTOM_VERIFY_TOKEN"
