--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.4.2",
     "@astrojs/tailwind": "^6.0.2",
@@ -10,7 +11,8 @@
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.8",
     "tailwindcss": "^3.4.17",
-    "turndown": "^7.2.0"
+    "turndown": "^7.2.0",
+    "typescript": "^5.9.2"
   },
   "scripts": {
     "dev": "astro dev",
